--- a/NightMarket.Infrastructure/NightMarket.Infrastructure.csproj
+++ b/NightMarket.Infrastructure/NightMarket.Infrastructure.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
-		<PackageReference Include="SendGrid" Version="9.24.1" />
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
+		<PackageReference Include="NETCore.MailKit" Version="2.1.0" />
+		
 	</ItemGroup>
 
   <ItemGroup>
