All done settup base project + done identity of asp.net but database doesnt clean

--- a/NightMarket.API/appsettings.json
+++ b/NightMarket.API/appsettings.json
@@ -1,5 +1,7 @@
 {
-
+  "ConnectionStrings": {
+    "ApplicationConnectionString": "server=(local); database=Ecommerce;user=sa;password=123;Integrated Security=true;TrustServerCertificate=Yes"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
