--- a/NightMarket.Application/NightMarket.Application.csproj
+++ b/NightMarket.Application/NightMarket.Application.csproj
@@ -16,6 +16,8 @@
 
   <ItemGroup>
     <Folder Include="Constants\" />
+    <Folder Include="Interfaces\Identity\" />
+    <Folder Include="Interfaces\Infrastructure\" />
     <Folder Include="Features\" />
     <Folder Include="Models\" />
     <Folder Include="Profiles\" />
