Build Database xoay quanh Product

--- a/NightMarket.API/appsettings.json
+++ b/NightMarket.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ApplicationConnectionString": "server=(local); database=Ecommerce;user=sa;password=123;Integrated Security=true;TrustServerCertificate=Yes"
+    "ApplicationConnectionString": "server=(local); database=NightMarket;user=sa;password=123;Integrated Security=true;TrustServerCertificate=Yes"
   },
   "Logging": {
     "LogLevel": {
