--- a/NightMarket.Application/NightMarket.Application.csproj
+++ b/NightMarket.Application/NightMarket.Application.csproj
@@ -16,9 +16,12 @@
 
   <ItemGroup>
     <Folder Include="Constants\" />
+    <Folder Include="Features\Products\Handles\Commands\" />
+    <Folder Include="Features\Products\Handles\Queries\" />
+    <Folder Include="Features\Products\Requests\Commands\" />
+    <Folder Include="Features\Products\Requests\Queries\" />
     <Folder Include="Interfaces\Identity\" />
     <Folder Include="Interfaces\Infrastructure\" />
-    <Folder Include="Features\" />
     <Folder Include="Models\" />
     <Folder Include="Profiles\" />
   </ItemGroup>
