--- a/NightMarket.API/NightMarket.API.csproj
+++ b/NightMarket.API/NightMarket.API.csproj
@@ -8,11 +8,13 @@
 
   <ItemGroup>
 	  <PackageReference Include="MediatR" Version="9.0.0" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.8">
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.16" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.16">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
 	  <PackageReference Include="MediatR" />
+	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.13" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
